syntax = "proto3";
package node.v1;

service NodeService {
    rpc GetNodeType (NodeTypeRequest) returns (NodeTypeResponse);
}

message NodeTypeRequest {}

message NodeTypeResponse {
    string id = 1;
    string result = 2;
}
